Supply Django settings to the front end client.
We want to supply settings stored on the server directly to the client in some
cases. Here we provide a Javascript object that is written to the Django
template. Front end code picks up this data and supplies it to our JS modules.

--- a/src/rf/apps/home/templates/base.html
+++ b/src/rf/apps/home/templates/base.html
@@ -17,6 +17,9 @@
 </head>
 <body>
 <div id="container"></div>
+<script type="text/javascript">
+    window.clientSettings = {{ client_settings | safe }};
+</script>
 <script type="text/javascript" src="{% static 'js/vendor/multi-level-menu/modernizr.custom.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/vendor.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
